# bugzilla-bug-report-clarity-evaluator

./: .gitignore  README.md  global_config.yaml  pyproject.toml
src/build_dataset/: config.py  config.yaml  main.py
src/build_dataset/fetcher/: client.py  pages.py  processor.py  progress.py  worker.py
src/build_dataset/schemas/: bugs_schema.py  comment_schema.py  config_schema.py  history_schema.py
src/build_dataset/utils/: params.py  parquet.py
src/build_model/: benchmark_models.py  config.yaml  inspect_dataset.py  train_inference_model.py
src/build_model/config/: config.py  config_schema.py
src/build_model/data/: load_data.py
src/build_model/models/: model_adapter.py  models.py  threshold_optimizer.py  train_cv_models.py
src/build_model/preprocessing/: categorical_encoding.py  embeddings.py  param.py  preprocess.py
